--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/express": "^4.17.17",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "ioredis": "^5.3.2"
+    "ioredis": "^5.3.2",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.3.4"
   }
 }
