--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   },
   "dependencies": {
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.7",
+    "cloudinary": "^1.37.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "mongodb": "^5.7.0",
-    "mongoose": "^7.3.4"
+    "mongoose": "^7.3.4",
+    "multer": "^1.4.5-lts.1"
   }
 }
