--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ioredis": "^5.3.2",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.4",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "uniqid": "^5.4.0"
   }
 }
