--- a/app-service/package.json
+++ b/app-service/package.json
@@ -11,11 +11,11 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.0.1",
-    "prettier": "3.0.0",
     "tslint": "^6.1.3",
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@typegoose/typegoose": "^11.3.0",
     "@types/express": "^4.17.17",
     "@types/multer": "^1.4.7",
     "cloudinary": "^1.37.3",
@@ -24,7 +24,6 @@
     "ioredis": "^5.3.2",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.4",
-    "multer": "^1.4.5-lts.1",
-    "uniqid": "^5.4.0"
+    "multer": "^1.4.5-lts.1"
   }
 }
