--- a/app-service/package.json
+++ b/app-service/package.json
@@ -5,16 +5,18 @@
   "main": "index.ts",
   "scripts": {
     "start": "nodemon --exec ts-node index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.0.1",
     "tslint": "^6.1.3",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "jest": "^29.6.1"
   },
   "dependencies": {
+    "@types/web-push": "^3.3.2",
     "@typegoose/typegoose": "^11.3.0",
     "@types/express": "^4.17.17",
     "@types/multer": "^1.4.7",
@@ -24,6 +26,6 @@
     "ioredis": "^5.3.2",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.4",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
   }
 }
