--- a/app-service/package.json
+++ b/app-service/package.json
@@ -10,22 +10,27 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.3",
+    "@types/mongodb-memory-server": "^2.3.0",
+    "jest": "^29.6.1",
+    "mongodb-memory-server": "^8.13.0",
     "nodemon": "^3.0.1",
+    "ts-jest": "^29.1.1",
     "tslint": "^6.1.3",
-    "typescript": "^5.1.6",
-    "jest": "^29.6.1"
+    "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@types/web-push": "^3.3.2",
     "@typegoose/typegoose": "^11.3.0",
     "@types/express": "^4.17.17",
     "@types/multer": "^1.4.7",
+    "@types/web-push": "^3.3.2",
     "cloudinary": "^1.37.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.4",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
