--- a/app-service/package.json
+++ b/app-service/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "nodemon --exec ts-node index.ts",
-    "test": "jest"
+    "build": "tsc",
+    "test": "jest",
+    "start": "nodemon --exec ts-node index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -31,6 +32,7 @@
     "ioredis": "^5.3.2",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.4",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "web-push": "^3.6.3"
   }
 }
