--- a/app-service/package.json
+++ b/app-service/package.json
@@ -33,6 +33,7 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.4",
     "multer": "^1.4.5-lts.1",
-    "web-push": "^3.6.3"
+    "web-push": "^3.6.3",
+    "winston": "^3.10.0"
   }
 }
