--- a/app-service/Dockerfile
+++ b/app-service/Dockerfile
@@ -5,7 +5,9 @@ WORKDIR /app
 COPY ["package.json", "package-lock.json*", "./"]
 
 RUN npm install
+
 RUN npm install -g ts-node
+
 COPY . .
 
-CMD ["npm", "run", "start"]
+CMD ["npm", "run", "dev"]
