--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,10 +1,11 @@
-FROM node
+FROM node:18-alpine
 
-WORKDIR /app
+WORKDIR /client
 
 COPY package.json .
 
 RUN npm i
+RUN npm i react-query
 
 COPY . .
 
