--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "${NGINX_PORT}:${NGINX_PORT}"
     networks:
-      - my_network
+      - nginx_network
 
   app_service:
     image: app_service
@@ -24,7 +24,8 @@ services:
     depends_on:
       - redis
     networks:
-      - my_network
+      - nginx_network
+      - app_network
 
   redis:
     image: redis:7.2-rc-alpine
@@ -34,7 +35,8 @@ services:
     env_file:
       - .env
     networks:
-      - my_network
+      - app_network
+      - worker_network
 
   worker:
     image: worker
@@ -47,7 +49,8 @@ services:
     volumes:
       - ./worker:/worker
     networks:
-      - my_network
+      - worker_network
+      - app_network
 
   client:
     image: client
@@ -65,3 +68,6 @@ services:
 
 networks:
   my_network:
+  nginx_network:
+  app_network:
+  worker_network:
